# FinamTradeApiPy

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql.yml  py-checks.yaml  tests.yml
examples/: access_token.py  account.py  assets.py  auto_token_refresh.py  candles.py  instruments.py  order.py  orders.py  portfolio.py  security.py
finam/: client.py  exceptions.py  models.py
finam/access/: access-token.py  model.py
finam/base_client/: base.py
finam/order/: model.py  order.py
finam/portfolio/: model.py  portfolio.py
finam/securities/: model.py  securities.py
finam_trade_api/: __init__.py  client.py  models.py
finam_trade_api/access/: __init__.py  access_token.py  model.py
finam_trade_api/account/: __init__.py  account.py  model.py
finam_trade_api/assets/: __init__.py  assets.py  model.py
finam_trade_api/base_client/: __init__.py  base.py  models.py  token_manager.py
finam_trade_api/candles/: __init__.py  candles.py  model.py
finam_trade_api/events/: event.py
finam_trade_api/instruments/: __init__.py  instruments.py  model.py
finam_trade_api/order/: __init__.py  model.py  order.py
finam_trade_api/portfolio/: __init__.py  model.py  portfolio.py
finam_trade_api/quotas/: __init__.py  model.py  quotas.py
finam_trade_api/securities/: __init__.py  model.py  securities.py
tests/: test_client.py
tests/access/: test_access_token.py
tests/account/: test_account.py
tests/assets/: test_assets.py
tests/base_client/: test_base_client.py
tests/candles/: test_candles.py
tests/instruments/: test_instrument.py
tests/order/: test_order.py
tests/portfolio/: test_portfolio.py
tests/securities/: test_securities.py
