[tool.poetry]
name = "finam-trade-api"
version = "2.0.1"
description = "Асинхронный REST-клиент для API Finam"
authors = ["DBoyara <boyarshin.den@yandex.ru>"]
license = "GNU GPL v.3.0"
readme = "README.md"
packages = [{include = "finam_trade_api"}]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.4"
pydantic = "^1.10.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^1.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
