[tool.poetry]
name = "finam-trade-api"
version = "4.0.3"
description = "Асинхронный REST-клиент для API Finam"
authors = ["DBoyara <boyarshin.den@yandex.ru>"]
license = "GNU GPL v.3.0"
readme = "README.md"
packages = [{include = "finam_trade_api"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.11"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
isort = "^5.13.2"
twine = "^4.0.2"
ruff = "^0.2.2"
pytest = "^7.4.4"
pytest-asyncio = "^0.21.2"
pytest-cov = "^4.1.0"
pytest-dependency = "^0.5.1"
wheel = "^0.44.0"
bandit = "^1.8.3"
detect-secrets = "^1.5.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version=3.11
warn_return_any=1
warn_unused_configs=1
ignore_missing_imports = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".pytest_cache",
    "tests",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# See all rules at https://docs.astral.sh/ruff/rules/
select = ["E1", "E4", "E5", "E7", "E9", "F", "I", "W", "N804", "N805", "ASYNC", "RUF", "Q"]
ignore = ["F401", "W505", "ASYNC101", "RUF001", "RUF002", "RUF003", "RUF005", "RUF012", "W605"]

# Allow fix for all enabled rules (when `--fix`) is provided.
# I - isort, E5 - lines too long
fixable = ["I", "E5"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
split-on-trailing-comma = true
